--- a/services.html
+++ b/services.html
@@ -232,7 +232,7 @@
                         </div>
                         <div class="services-div-4">
                             <img class="services-pattern-icon" src="https://c.animaapp.com/gIt7HmzZ/img/pattern-icon-4.svg" />
-                            <div class="services-text-wrapper-16">Comprehensive treatment plan</div>
+                            <div class="services-text-wrapper-16">Comprehensive treatment <br class="br-mobile" /> plan</div>
                         </div>
                         <div class="services-div-4">
                             <img class="services-pattern-icon" src="https://c.animaapp.com/gIt7HmzZ/img/pattern-icon-5.svg" />
@@ -269,7 +269,7 @@
                         </div>
                         <div class="services-div-4">
                             <img class="services-pattern-icon" src="https://c.animaapp.com/gIt7HmzZ/img/pattern-icon-9.svg" />
-                            <div class="services-text-wrapper-16">Comprehensive treatment plan</div>
+                            <div class="services-text-wrapper-16">Comprehensive treatment<br class="br-mobile" /> plan</div>
                         </div>
                         <div class="services-div-4">
                             <img class="services-pattern-icon" src="https://c.animaapp.com/gIt7HmzZ/img/pattern-icon-10.svg" />
@@ -281,7 +281,7 @@
                         </div>
                         <div class="services-div-4">
                             <img class="services-pattern-icon" src="https://c.animaapp.com/gIt7HmzZ/img/pattern-icon-12.svg" />
-                            <p class="services-exclusive-one-on-one-2">Exclusive One-on-one Session with orthodontic expert</p>
+                            <p class="services-exclusive-one-on-one-2">Exclusive One-on-one Session<br class="br-mobile" /> with orthodontic expert</p>
                         </div>
                         </div>
                     </div>
@@ -329,7 +329,7 @@
                         <div class="services-icon-text-2">
                             <img class="services-pattern-icon" src="https://c.animaapp.com/gIt7HmzZ/img/pattern-icon-13.svg" />
                             <p class="services-text-wrapper-24">
-                            Get 25% off Invisalign cases plans by submittting case through Align Vision.
+                            Get 25% off Invisalign cases<br class="br-mobile" /> plans by submittting case<br class="br-mobile" /> through Align Vision.
                             </p>
                         </div>
                         <div class="services-div-4">
@@ -347,8 +347,8 @@
                         </div>
                     </div>
                     <div class="services-title-2">
-                        <div class="services-text-wrapper-25">Find the Perfect Fit</div>
-                        <p class="services-text-wrapper-26">Explore Our treatment Planning Pricing Options</p>
+                        <div class="services-text-wrapper-25">Find the<br class="br-mobile" /> Perfect Fit</div>
+                        <p class="services-text-wrapper-26">Explore Our treatment<br class="br-mobile" /> Planning Pricing Options</p>
                     </div>
                     <button onclick="closePlanComparation()" class="services-button">
                         <img class="services-img-2" src="https://c.animaapp.com/gIt7HmzZ/img/less.svg" />
