--- a/services.html
+++ b/services.html
@@ -350,6 +350,235 @@
                         <div class="services-text-wrapper-25">Find the<br class="br-mobile" /> Perfect Fit</div>
                         <p class="services-text-wrapper-26">Explore Our treatment<br class="br-mobile" /> Planning Pricing Options</p>
                     </div>
+                    <div class="compare-all-plans-text br-mobile">Compare all plans</div>
+                    <div class="services-comparison-mquery br-mobile">
+                        <div class="comparison-mquery-comparison">
+                            <div class="comparison-mquery-text-wrapper">Software access</div>
+                            <div class="comparison-mquery-row">
+                                <div class="comparison-mquery-starter">
+                                    <img class="comparison-mquery-check" src="./media/icons/content-home/check.png" />
+                                    <div class="comparison-mquery-div">Starter</div>
+                                </div>
+                                <div class="comparison-mquery-div-2">
+                                    <img class="comparison-mquery-check" src="./media/icons/content-home/check.png" />
+                                    <div class="comparison-mquery-div">Basic</div>
+                                </div>
+                                <div class="comparison-mquery-div-2">
+                                    <img class="comparison-mquery-check" src="./media/icons/content-home/check.png" />
+                                    <div class="comparison-mquery-div">Builder</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="line-comparison-mquery-comparison"></div>
+
+                        <div class="comparison-mquery-comparison">
+                            <div class="comparison-mquery-text-wrapper">Free case evaluation</div>
+                            <div class="comparison-mquery-row">
+                                <div class="comparison-mquery-starter">
+                                    <img class="comparison-mquery-check" src="./media/icons/content-home/check.png" />
+                                    <div class="comparison-mquery-div">Starter</div>
+                                </div>
+                                <div class="comparison-mquery-div-2">
+                                    <img class="comparison-mquery-check" src="./media/icons/content-home/check.png" />
+                                    <div class="comparison-mquery-div">Basic</div>
+                                </div>
+                                <div class="comparison-mquery-div-2">
+                                    <img class="comparison-mquery-check" src="./media/icons/content-home/check.png" />
+                                    <div class="comparison-mquery-div">Builder</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="line-comparison-mquery-comparison"></div>
+
+                        <div class="comparison-mquery-comparison">
+                            <div class="comparison-mquery-text-wrapper">Comprehensive treatment plan</div>
+                            <div class="comparison-mquery-row">
+                                <div class="comparison-mquery-starter">
+                                    <img class="comparison-mquery-check" src="./media/icons/content-home/check.png" />
+                                    <div class="comparison-mquery-div">Starter</div>
+                                </div>
+                                <div class="comparison-mquery-div-2">
+                                    <img class="comparison-mquery-check" src="./media/icons/content-home/check.png" />
+                                    <div class="comparison-mquery-div">Basic</div>
+                                </div>
+                                <div class="comparison-mquery-div-2">
+                                    <img class="comparison-mquery-check" src="./media/icons/content-home/check.png" />
+                                    <div class="comparison-mquery-div">Builder</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="line-comparison-mquery-comparison"></div>
+
+                        <div class="comparison-mquery-comparison">
+                            <div class="comparison-mquery-text-wrapper">Orthodontic expert guidance</div>
+                            <div class="comparison-mquery-row">
+                                <div class="comparison-mquery-starter">
+                                    <img class="comparison-mquery-check" src="./media/icons/content-home/check.png" />
+                                    <div class="comparison-mquery-div">Starter</div>
+                                </div>
+                                <div class="comparison-mquery-div-2">
+                                    <img class="comparison-mquery-check" src="./media/icons/content-home/check.png" />
+                                    <div class="comparison-mquery-div">Basic</div>
+                                </div>
+                                <div class="comparison-mquery-div-2">
+                                    <img class="comparison-mquery-check" src="./media/icons/content-home/check.png" />
+                                    <div class="comparison-mquery-div">Builder</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="line-comparison-mquery-comparison"></div>
+
+                        <div class="comparison-mquery-comparison">
+                            <div class="comparison-mquery-text-wrapper">3 additional refinement</div>
+                            <div class="comparison-mquery-row">
+                                <div class="comparison-mquery-starter">
+                                    <img class="comparison-mquery-check" src="./media/icons/content-home/check.png" />
+                                    <div class="comparison-mquery-div">Starter</div>
+                                </div>
+                                <div class="comparison-mquery-div-2">
+                                    <img class="comparison-mquery-check" src="./media/icons/content-home/check.png" />
+                                    <div class="comparison-mquery-div">Basic</div>
+                                </div>
+                                <div class="comparison-mquery-div-2">
+                                    <img class="comparison-mquery-check" src="./media/icons/content-home/check.png" />
+                                    <div class="comparison-mquery-div">Builder</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="line-comparison-mquery-comparison"></div>
+
+                        <div class="comparison-mquery-comparison">
+                            <div class="comparison-mquery-text-wrapper">Exclusive One-on-one  Session with<br /> orthodontic expert</div>
+                            <div class="comparison-mquery-row">
+                                <div class="comparison-mquery-starter">
+                                    <img class="comparison-mquery-check" src="./media/icons/content-home/check.png" />
+                                    <div class="comparison-mquery-div">Starter</div>
+                                </div>
+                                <div class="comparison-mquery-div-2">
+                                    <img class="comparison-mquery-check" src="./media/icons/content-home/check.png" />
+                                    <div class="comparison-mquery-div">Basic</div>
+                                </div>
+                                <div class="comparison-mquery-div-2">
+                                    <img class="comparison-mquery-check" src="./media/icons/content-home/check.png" />
+                                    <div class="comparison-mquery-div">Builder</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="line-comparison-mquery-comparison"></div>
+
+                        <div class="comparison-mquery-comparison">
+                            <div class="comparison-mquery-text-wrapper">Discuss and review treatment plans</div>
+                            <div class="comparison-mquery-row">
+                                <div class="comparison-mquery-starter">
+                                    <img class="comparison-mquery-check" src="./media/icons/content-home/check.png" />
+                                    <div class="comparison-mquery-div">Starter</div>
+                                </div>
+                                <div class="comparison-mquery-div-2">
+                                    <img class="comparison-mquery-check" src="./media/icons/content-home/check.png" />
+                                    <div class="comparison-mquery-div">Basic</div>
+                                </div>
+                                <div class="comparison-mquery-div-2">
+                                    <img class="comparison-mquery-check" src="./media/icons/content-home/check.png" />
+                                    <div class="comparison-mquery-div">Builder</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="line-comparison-mquery-comparison"></div>
+
+                        <div class="comparison-mquery-comparison">
+                            <div class="comparison-mquery-text-wrapper">Discover Insights on Treatment Predictability</div>
+                            <div class="comparison-mquery-row">
+                                <div class="comparison-mquery-starter">
+                                    <img class="comparison-mquery-check" src="./media/icons/content-home/check.png" />
+                                    <div class="comparison-mquery-div">Starter</div>
+                                </div>
+                                <div class="comparison-mquery-div-2">
+                                    <img class="comparison-mquery-check" src="./media/icons/content-home/check.png" />
+                                    <div class="comparison-mquery-div">Basic</div>
+                                </div>
+                                <div class="comparison-mquery-div-2">
+                                    <img class="comparison-mquery-check" src="./media/icons/content-home/check.png" />
+                                    <div class="comparison-mquery-div">Builder</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="line-comparison-mquery-comparison"></div>
+
+                        <div class="comparison-mquery-comparison">
+                            <div class="comparison-mquery-text-wrapper">Comprehensive Guidance on Staging Protocols</div>
+                            <div class="comparison-mquery-row">
+                                <div class="comparison-mquery-starter">
+                                    <img class="comparison-mquery-check" src="./media/icons/content-home/check.png" />
+                                    <div class="comparison-mquery-div">Starter</div>
+                                </div>
+                                <div class="comparison-mquery-div-2">
+                                    <img class="comparison-mquery-check" src="./media/icons/content-home/check.png" />
+                                    <div class="comparison-mquery-div">Basic</div>
+                                </div>
+                                <div class="comparison-mquery-div-2">
+                                    <img class="comparison-mquery-check" src="./media/icons/content-home/check.png" />
+                                    <div class="comparison-mquery-div">Builder</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="line-comparison-mquery-comparison"></div>
+
+                        <div class="comparison-mquery-comparison">
+                            <div class="comparison-mquery-text-wrapper">Optimize treatment planning for efficiency and<br /> satisfaction.</div>
+                            <div class="comparison-mquery-row">
+                                <div class="comparison-mquery-starter">
+                                    <img class="comparison-mquery-check" src="./media/icons/content-home/check.png" />
+                                    <div class="comparison-mquery-div">Starter</div>
+                                </div>
+                                <div class="comparison-mquery-div-2">
+                                    <img class="comparison-mquery-check" src="./media/icons/content-home/check.png" />
+                                    <div class="comparison-mquery-div">Basic</div>
+                                </div>
+                                <div class="comparison-mquery-div-2">
+                                    <img class="comparison-mquery-check" src="./media/icons/content-home/check.png" />
+                                    <div class="comparison-mquery-div">Builder</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="line-comparison-mquery-comparison"></div>
+
+                        <div class="comparison-mquery-comparison">
+                            <div class="comparison-mquery-text-wrapper">Discover best practices and techniques for<br /> successful clear aligner treatment.</div>
+                            <div class="comparison-mquery-row">
+                                <div class="comparison-mquery-starter">
+                                    <img class="comparison-mquery-check" src="./media/icons/content-home/x.png" />
+                                    <div class="comparison-mquery-div">Starter</div>
+                                </div>
+                                <div class="comparison-mquery-div-2">
+                                    <img class="comparison-mquery-check" src="./media/icons/content-home/x.png" />
+                                    <div class="comparison-mquery-div">Basic</div>
+                                </div>
+                                <div class="comparison-mquery-div-2">
+                                    <img class="comparison-mquery-check" src="./media/icons/content-home/check.png" />
+                                    <div class="comparison-mquery-div">Builder</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="line-comparison-mquery-comparison"></div>
+
+                        <div class="comparison-mquery-comparison">
+                            <div class="comparison-mquery-text-wrapper">Collaborate on customized treatment plans.</div>
+                            <div class="comparison-mquery-row">
+                                <div class="comparison-mquery-starter">
+                                    <img class="comparison-mquery-check" src="./media/icons/content-home/x.png" />
+                                    <div class="comparison-mquery-div">Starter</div>
+                                </div>
+                                <div class="comparison-mquery-div-2">
+                                    <img class="comparison-mquery-check" src="./media/icons/content-home/x.png" />
+                                    <div class="comparison-mquery-div">Basic</div>
+                                </div>
+                                <div class="comparison-mquery-div-2">
+                                    <img class="comparison-mquery-check" src="./media/icons/content-home/check.png" />
+                                    <div class="comparison-mquery-div">Builder</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     <button onclick="closePlanComparation()" class="services-button">
                         <img class="services-img-2" src="https://c.animaapp.com/gIt7HmzZ/img/less.svg" />
                         <svg class="services-svg-2" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
