--- a/our-blog.html
+++ b/our-blog.html
@@ -130,7 +130,7 @@
                             </div>
                             <p class="our-blog-p">The Benefits of Clear Aligners Over Traditional Braces</p>
                             <p class="our-blog-text-wrapper-2">
-                            Lorem ipsum dolor sit amet consectetur. In risus orci augue varius tellus diam. In vulputate gravida
+                            Lorem ipsum dolor sit amet consectetur. In risus orci augue varius<br class="br-mobile" /> tellus diam. In vulputate gravida
                             enim nunc tortor ut at nisi ut.
                             </p>
                             <a href="./blog-single-page.html">
@@ -149,13 +149,13 @@
                         <div class="our-blog-post-card">
                         <img class="our-blog-rectangle" src="./media/icons/content-home/Rectangle 89.png">
                         <div class="our-blog-content-2">
-                            <p class="our-blog-text-wrapper-6">The Benefits of Clear Aligners Over Traditional Braces</p>
+                            <p class="our-blog-text-wrapper-6">The Benefits of Clear Aligners Over<br class="br-mobile" /> Traditional Braces</p>
                             <div class="our-blog-chip-2">
                             <div class="our-blog-div-wrapper"><div class="our-blog-text-wrapper">19-02-2024</div></div>
                             <div class="our-blog-div-wrapper"><div class="our-blog-text-wrapper">4 mins read</div></div>
                             </div>
                             <p class="our-blog-text-wrapper-2">
-                            Lorem ipsum dolor sit amet consectetur. In risus orci augue varius tellus diam. In vulputate gravida
+                            Lorem ipsum dolor sit amet consectetur. In risus orci augue varius<br class="br-mobile" /> tellus diam. In vulputate gravida
                             enim nunc tortor ut at nisi ut.
                             </p>
                             <a href="./blog-single-page.html">
@@ -166,13 +166,13 @@
                         <div class="our-blog-post-card">
                         <img class="our-blog-rectangle" src="./media/icons/content-home/Rectangle 89.png">
                         <div class="our-blog-content-2">
-                            <p class="our-blog-the-benefits-of">Invisalign vs. Other Aligners: What&#39;s Right for You?</p>
+                            <p class="our-blog-the-benefits-of">Invisalign vs. Other Aligners: What&#39;s<br class="br-mobile" /> Right for You?</p>
                             <div class="our-blog-chip-2">
                             <div class="our-blog-div-wrapper"><div class="our-blog-text-wrapper">19-02-2024</div></div>
                             <div class="our-blog-div-wrapper"><div class="our-blog-text-wrapper">4 mins read</div></div>
                             </div>
                             <p class="our-blog-text-wrapper-2">
-                            Lorem ipsum dolor sit amet consectetur. In risus orci augue varius tellus diam. In vulputate gravida
+                            Lorem ipsum dolor sit amet consectetur. In risus orci augue varius<br class="br-mobile" /> tellus diam. In vulputate gravida
                             enim nunc tortor ut at nisi ut.
                             </p>
                             <a href="./blog-single-page.html">
@@ -183,13 +183,13 @@
                         <div class="our-blog-post-card">
                         <img class="our-blog-rectangle" src="./media/icons/content-home/Rectangle 89.png">
                         <div class="our-blog-content-2">
-                            <p class="our-blog-text-wrapper-6">The Benefits of Clear Aligners Over Traditional Braces</p>
+                            <p class="our-blog-text-wrapper-6">The Benefits of Clear Aligners Over<br class="br-mobile" /> Traditional Braces</p>
                             <div class="our-blog-chip-2">
                             <div class="our-blog-div-wrapper"><div class="our-blog-text-wrapper">19-02-2024</div></div>
                             <div class="our-blog-div-wrapper"><div class="our-blog-text-wrapper">4 mins read</div></div>
                             </div>
                             <p class="our-blog-text-wrapper-2">
-                            Lorem ipsum dolor sit amet consectetur. In risus orci augue varius tellus diam. In vulputate gravida
+                            Lorem ipsum dolor sit amet consectetur. In risus orci augue varius<br class="br-mobile" /> tellus diam. In vulputate gravida
                             enim nunc tortor ut at nisi ut.
                             </p>
                             <a href="./blog-single-page.html">
