--- a/blog-single-page.html
+++ b/blog-single-page.html
@@ -195,7 +195,7 @@
                         </div>
                     </div>
                     <div class="blog-single-overlap">
-                        <p class="blog-single-text-wrapper-4">The Benefits of Clear Aligners Over Traditional Braces</p>
+                        <p class="blog-single-text-wrapper-4">The Benefits of Clear Aligners<br class="br-mobile" /> Over Traditional Braces</p>
                         <div class="blog-single-author">
                             <img class="blog-single-image" src="https://c.animaapp.com/hjuZoMv7/img/image-1@2x.png" />
                             <div class="blog-single-dr-amet-ariat">Dr.&nbsp;&nbsp;Amet Ariat</div>
