--- a/blog-single-page.html
+++ b/blog-single-page.html
@@ -322,8 +322,8 @@
                         extra force and fix biting difficulties.
                     </p>
                     <p class="blog-single-text-wrapper-12">The Benefits of Clear Aligners Over Traditional Braces</p>
-                    <p class="blog-single-text-wrapper-13">The growing popularity of clear aligners.</p>
-                    <p class="blog-single-text-wrapper-14">Traditional Braces: A Quick Overview.</p>
+                    <p class="blog-single-text-wrapper-13">The growing popularity of clear<br class="br-mobile" /> aligners.</p>
+                    <p class="blog-single-text-wrapper-14">Traditional Braces: A Quick<br class="br-mobile" /> Overview.</p>
                     <p class="blog-single-pressure-and-tension">
                         Pressure and Tension: The archwire applies consistent pressure to teeth, guiding them into
                         perfect
@@ -346,7 +346,7 @@
                             during the first adjustment phase. The wires
                             and brackets might irritate the cheeks and lips, causing pain and possible ulcers.
                             Furthermore, routine
-                            adjustments may result in temporary pain when the teeth shift gradually.<br /></span>
+                            adjustments may result in temporary pain when the teeth shift gradually.<br /><br /></span>
                         <span class="blog-single-text-wrapper-11"><br /></span>
                         <span class="blog-single-span">Dietary Restrictions<br /></span>
                         <span class="blog-single-text-wrapper-10">Traditional braces may limit a person&#39;s dietary
@@ -354,7 +354,7 @@
                             Sticky and hard foods can ruin the braces, so
                             some snacks and sweets must be avoided. This dietary limitation can be difficult, altering
                             one&#39;s eating
-                            patterns and enjoyment of various foods.<br /></span>
+                            patterns and enjoyment of various foods.<br /><br /></span>
                         <span class="blog-single-text-wrapper-11"><br /></span>
                         <span class="blog-single-span">Oral Care Concerns<br /></span>
                         <span class="blog-single-text-wrapper-10">Many people who get traditional braces can face
@@ -362,7 +362,7 @@
                             maintaining good oral care. This is because the
                             brackets and wires have a surface to collect plaque and food particles. Brushing and
                             flossing must be done
-                            thoroughly and carefully, which takes more time and effort than without braces.<br /></span>
+                            thoroughly and carefully, which takes more time and effort than without braces.<br /><br /></span>
                         <span class="blog-single-text-wrapper-11"><br /></span>
                         <span class="blog-single-span">Speech Impediments<br /></span>
                         <span class="blog-single-text-wrapper-10">Adapting to traditional braces may result in temporary
@@ -631,10 +631,10 @@
                     <div class="blog-single-text-wrapper-22">Components</div>
                     <div class="blog-single-text-wrapper-23">Mechanics</div>
                     <div class="blog-single-challenges">Challenges &amp; Discomforts</div>
-                    <p class="blog-single-text-wrapper-24">Clear Aligners: An Innovative Alternative</p>
+                    <p class="blog-single-text-wrapper-24">Clear Aligners: An Innovative<br class="br-mobile" /> Alternative</p>
                     <div class="blog-single-text-wrapper-25">How clear aligners work</div>
                     <p class="blog-single-text-wrapper-26">Materials used in clear aligners</p>
-                    <p class="blog-single-text-wrapper-27">Quick Brief of Orthodontic Treatments</p>
+                    <p class="blog-single-text-wrapper-27">Quick Brief of Orthodontic<br class="br-mobile" /> Treatments</p>
                 </div>
             </div>
             <!-- Blog single page End -->
