--- a/blog-single-page.html
+++ b/blog-single-page.html
@@ -123,7 +123,7 @@
                         <div class="blog-single-post-card">
                             <img class="blog-single-rectangle" src="./media/icons/content-home/Rectangle 89.png">
                             <div class="blog-single-content">
-                                <p class="blog-single-p">The Benefits of Clear Aligners Over Traditional Braces</p>
+                                <p class="blog-single-p">The Benefits of Clear Aligners Over<br class="br-mobile" /> Traditional Braces</p>
                                 <div class="blog-single-chip">
                                     <div class="blog-single-div-wrapper">
                                         <div class="blog-single-text-wrapper-2">19-02-2024</div>
@@ -147,7 +147,7 @@
                         <div class="blog-single-post-card">
                             <img class="blog-single-rectangle" src="./media/icons/content-home/Rectangle 89.png">
                             <div class="blog-single-content">
-                                <p class="blog-single-the-benefits-of">Invisalign vs. Other Aligners: What&#39;s Right
+                                <p class="blog-single-the-benefits-of">Invisalign vs. Other Aligners: What&#39;s<br class="br-mobile" /> Right
                                     for You?</p>
                                 <div class="blog-single-chip">
                                     <div class="blog-single-div-wrapper">
@@ -172,7 +172,7 @@
                         <div class="blog-single-post-card">
                             <img class="blog-single-rectangle" src="./media/icons/content-home/Rectangle 89.png">
                             <div class="blog-single-content">
-                                <p class="blog-single-p">The Benefits of Clear Aligners Over Traditional Braces</p>
+                                <p class="blog-single-p">The Benefits of Clear Aligners Over<br class="br-mobile" /> Traditional Braces</p>
                                 <div class="blog-single-chip">
                                     <div class="blog-single-div-wrapper">
                                         <div class="blog-single-text-wrapper-2">19-02-2024</div>
@@ -448,7 +448,7 @@
                     <p class="blog-single-text-wrapper-16">Significant Advantages of Clear Aligners</p>
                     <p class="blog-single-text-wrapper-17">Clear Aligners vs. Traditional Braces</p>
                     <div class="blog-single-text-wrapper-18">Addressing Common Concerns</div>
-                    <p class="blog-single-consultation">Consultation &amp; Choosing the Right Option</p>
+                    <p class="blog-single-consultation">Consultation &amp; Choosing the<br class="br-mobile" /> Right Option</p>
                     <p class="blog-single-misconceptions-about">
                         <span class="blog-single-span">Misconceptions about clear aligners<br /></span>
                         <span class="blog-single-text-wrapper-10">Misconceptions concerning clear aligners frequently
