--- a/contact-us.html
+++ b/contact-us.html
@@ -134,7 +134,7 @@
                                 <span class="contact-us-text-wrapper">Let’s Get</span> <span class="contact-us-span"> in
                                     Touch</span>
                             </p>
-                            <p class="contact-us-p">Feel free to contact to us any time. We will get back to you as soon
+                            <p class="contact-us-p">Feel free to contact to us any time. We will<br class="br-mobile" /> get back to you as soon
                                 as we can
                             </p>
                             <div class="contact-us-fields">
