--- a/about-us.html
+++ b/about-us.html
@@ -123,7 +123,7 @@
                                 src="https://c.animaapp.com/lNAuRkWM/img/vector-16.svg" /></div>
                     </div>
                     <div class="about-us-frame">
-                        <div class="about-us-dr-amer-ariat"><br />Dr. Amer Ariat</div>
+                        <div class="about-us-dr-amer-ariat"><br class="br-desktop"/>Dr. Amer Ariat</div>
                         <p class="about-us-founder-CEO-of">Founder &amp; CEO of AlignVision</p>
                         <p class="about-us-driven-by-a-dentist">
                             <br />&#34;Driven by a dentist&#39;s passion, AlignVision was created to overcome the
