--- a/about-us.html
+++ b/about-us.html
@@ -144,9 +144,8 @@
                             <img class="about-us-ortodoncista"
                                 src="https://c.animaapp.com/lNAuRkWM/img/ortodoncista-sosteniendo-telefono-imagen-rayos-x-mandibula-mostr.png" />
                             <p class="about-us-faced-with-the">
-                                &#34;Faced with the limitations of traditional treatments, we sought a better way.
-                                AlignVision is that
-                                leap forward, ensuring precise, predictable treatment planning.”
+                                &#34;Faced with the limitations of traditional treatments,<br class="br-mobile" /> we sought a better way.
+                                AlignVision is that leap<br class="br-mobile" /> forward, ensuring precise, predictable treatment<br class="br-mobile" /> planning.”
                             </p>
                             <div class="about-us-text-wrapper-3">Beyond Limits</div>
                         </div>
@@ -175,7 +174,7 @@
                             <div class="about-us-text-wrapper-6">Elevate Dentistry Together</div>
                             <p class="about-us-join-our-community">
                                 <span class="about-us-text-wrapper">Join Our </span> <span
-                                    class="about-us-text-wrapper-2">Community</span>
+                                    class="about-us-text-wrapper-2-2-2">Community</span>
                             </p>
                             <p class="about-us-be-part-of-the">
                                 &#34;Be part of the movement shaping the future of orthodontics. With AlignVision,
