--- a/about-us.html
+++ b/about-us.html
@@ -219,6 +219,7 @@
                                 <span class="about-us-span">&nbsp;</span>
                                 <span class="about-us-text-wrapper-2">we solve</span>
                             </p>
+                            <img class="about-us-ortodoncista-mquery" src="./media/icons/content-home/ortodoncista-sosteniendo-telefono-imagen-rayos-x-mandibula-mostrando 1.png">
                             <img class="about-us-ortodoncista"
                                 src="https://c.animaapp.com/lNAuRkWM/img/ortodoncista-sosteniendo-telefono-imagen-rayos-x-mandibula-mostr.png" />
                             <p class="about-us-faced-with-the">
