--- a/case-studies.html
+++ b/case-studies.html
@@ -230,7 +230,7 @@
                 <div class="case-studies">
                     <div class="case-studies-text-wrapper">Case Studies</div>
                     <p class="case-studies-div">
-                        Lorem ipsum dolor sit amet consectetur. Mattis luctus est tortor habitant vitae non auctor.<br>
+                        Lorem ipsum dolor sit amet consectetur. Mattis luctus est tortor habitant vitae non auctor.<br class="br-desktop">
                         Scelerisque nec eget velit condimentum habitant et. Eu mattis urna leo sit non
                     </p>
                     <div class="case-studies-frame">
