--- a/case-studies.html
+++ b/case-studies.html
@@ -233,6 +233,13 @@
                         Lorem ipsum dolor sit amet consectetur. Mattis luctus est tortor habitant vitae non auctor.<br class="br-desktop">
                         Scelerisque nec eget velit condimentum habitant et. Eu mattis urna leo sit non
                     </p>
+
+                    <div class="title-treatment-plan-mquery-case">
+                        <h3>Treatment Plan</h3>
+
+                        <p>Lorem ipsum dolor sit amet consectetur. Mattis luctus est tortor habitant vitae non auctor.</p>
+                    </div>
+                    
                     <div class="case-studies-frame">
                         <div class="case-studies-DSC"></div>
                         <div class="case-studies-DSC-2"></div>
